styles/styles.css
@import url('https://fonts.googleapis.com/css?family=Ruda:400,900');

:root {
    --dark-brown: #1B2021;
    --transparent-dark-brown: #1B20216C;
    --light-brown: #C2A878;
}

* {
    color: var(--dark-brown);
    font-family: 'Ruda', sans-serif;
}

body {
    background-color: var(--light-brown);
    background-image: url('/img/cream-pixels.png');
    
    text-align: center;

    overflow: hidden;
}

img {
    width: 300px;
    margin: 50px 0 auto;
}

h1 {
    text-shadow: 0 0 3px var(--transparent-dark-brown);
}

h2 {
    margin-bottom: 0;
}

h3 {
    margin-top: 0;
    text-transform: uppercase;
    letter-spacing: 4px;
    font-weight: normal;
}

h4 {
    margin-bottom: 0;
    text-transform: uppercase;
}

p {
    margin-top: 0;
}

span {
    cursor: pointer;
}

.rrss-icon {
    font-size: 32px;
}

.rrss-icon:hover {
    cursor: pointer;
}

.btn-section {
    display: inline-flex;
    height: 50px;
    width: max-content;
}

.skill-button {
    text-decoration: none;
    margin: auto 3px;
}

.skill-button h3 {
    font-weight: bold;
    letter-spacing: normal;
    width: 180px;
    background-color: var(--dark-brown);
    color: var(--light-brown);
    padding: 8px 25px;
    outline: dashed 3px var(--light-brown);
    outline-offset: -5px;
}

.skill-button h3:hover {
    animation: emphasize 0.3s;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
}

.skill-button h3:not(:hover) {
    animation: un-emphasize 0.3s;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
}


@keyframes emphasize {
    from {
        outline-offset: -5px;
        font-size: 18px;
        padding: 10px 25px;
    }
    to {
        outline-offset: 3px;
        font-size: 22px;
        padding: 8px 25px;
    }
}

@keyframes un-emphasize {
    from {
        outline-offset: 3px;
        font-size: 22px;
        padding: 8px 25px;
    }
    to {
        outline-offset: -5px;
        font-size: 18px;
        padding: 10px 25px;
    }
}

#home-logo {
    border-radius: 20px;
}

#copy-message {
    position: absolute;
    background-color: var(--dark-brown);
    color: var(--light-brown);
    font-size: 12px;
    padding: 10px 15px;
    outline: dashed 2px var(--light-brown);
    outline-offset: -3px;
    display: none;
    top: 0;
    left: 0;
    opacity: 0;
    animation-name: appearDisappear;
    animation-duration: 2s;
}

#skill-box {
    background-color: var(--dark-brown);
    outline: dashed 3px var(--light-brown);
    outline-offset: -5px;
    padding: 14px;
    width: 444px;
    height: 230px;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    text-align: left;
    display: none;
    margin-top: 2px;
    animation: appear-left 1s;
    animation-timing-function: cubic-bezier();
}

#skill-box h4 {
    color: var(--light-brown);
    margin: 10px 20px;
}

#skill-box table {
    margin-left: 10px;
}

#skill-box table th {
    color: var(--light-brown);
    font-size: 14px;
    text-align: center;
    height: 25px;
}

#skill-box table td ion-icon {
    color: var(--light-brown);
    font-size: 20px;
    vertical-align: middle;
}

#skill-box table td {
    height: 24px;
}

#skill-box table td .wrapper {
    animation: typing 1.5s;
    animation-delay: 0.5s;
    animation-timing-function: ease-in-out;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
    text-align: left;
}

#skill-box div  {
    margin: 0 auto;
    animation: fade-in 1.5s;
    animation-timing-function: ease-in;
}

@keyframes appear-left {
    0% {
        height: 0;
        width: 0;
    }
    50% {
        height: 230px;
        width: 0;
    }
    100% {
        width: 444px;
    }
}

@keyframes fade-in {
    0% {
        opacity: 0;
    }
    70% {
        opacity: 0;
    }
    100% {
        opacity: 100%;
    }
}

@keyframes typing {
    0% {
        width: 0;
    }
    25% {
        width: 0;
    }
    100% {
        width: 100%;
    }
}


#about-box {
    background-color: var(--dark-brown);
    outline: dashed 3px var(--light-brown);
    outline-offset: -5px;
    padding: 14px;
    width: 444px;
    height: 230px;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    text-align: left;
    display: none;
    margin-top: 2px;
    animation: appear-left 1s;
    animation-timing-function: cubic-bezier();
}

@keyframes appearDisappear {
    0% {
        opacity: 0;
    }
    33% {
        opacity: 1;
    }
    66% {
        opacity: 1;
    }
    100% {
        opacity: 0;
        display: none;
    }
}

/* Adjustments for mobile only */
@media only screen and (max-width: 600px) {
    img {
        width: 250px;
        margin: 30px 0 auto;
    }

    .skill-button h3 {
        font-weight: bold;
        letter-spacing: normal;
        width: 155px;
        background-color: var(--dark-brown);
        color: var(--light-brown);
        padding: 14px;
        outline: dashed 3px var(--light-brown);
        outline-offset: -5px;
    }
    
    .skill-button h3:hover {
        animation: emphasize 0.3s;
        animation-timing-function: ease-out;
        animation-fill-mode: forwards;
    }
    
    .skill-button h3:not(:hover) {
        animation: un-emphasize 0.3s;
        animation-timing-function: ease-out;
        animation-fill-mode: forwards;
    }
    
    @keyframes emphasize {
        from {
            outline-offset: -5px;
            font-size: 14px;
            padding: 14px;
        }
        to {
            outline-offset: 3px;
            font-size: 18px;
            padding: 12px 14px;
        }
    }

    #skill-box {
        width: 350px;
    }

    #about-box {
        width: 350px;
    }
    
    @keyframes un-emphasize {
        from {
            outline-offset: 3px;
            font-size: 18px;
            padding: 12px 14px;
        }
        to {
            outline-offset: -5px;
            font-size: 14px;
            padding: 14px;
        }
    }

    #skill-box {
        padding: 7px;
        width: 364px;
    }
    
    #skill-box h4 {
        margin: 10px 5px;
    }
    
    #skill-box table th {
        font-size: 12px;
        text-align: center;
        height: 25px;
    }
    
    #skill-box table td ion-icon {
        font-size: 16px;
        vertical-align: middle;
    }
}

